--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ John Cooper, a name synonymous with Castlemilk and community struggle over the l
 <p>John Cooper Talk
 <a href="https://vimeo.com/166195562">https://vimeo.com/166195562</a>
 and - After talk discussion 
+<iframe width="360" height="200" src="https://vimeo.com/166195750" frameborder="0" allowfullscreen></iframe>
 <a href="https://vimeo.com/166195750">https://vimeo.com/166195750</a></p>
 
 <p>—</p>
