--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ John Cooper, a name synonymous with Castlemilk and community struggle over the l
 and - After talk discussion 
 <iframe width="100%" height="100%" src="https://vimeo.com/166195750" frameborder="0" allowfullscreen></iframe>
 <a href="https://vimeo.com/166195750">https://vimeo.com/166195750</a></p>
-
+<iframe width="360" height="200" src="https://www.youtube.com/embed/KLYH9V-npL4" frameborder="0" allowfullscreen></iframe>
 <p>—</p>
 
 <p>Peter Morton
